# PuchAI-Hackthon

./: .dockerignore  .env.example  API_SAMPLES.md  DEPLOYMENT.md  Dockerfile  pyproject.toml
config/: agent_config.yaml  form_links.py  hostel_data.py
src/: mcp_server.py
src/agents/: base_agent.py  complaint_handler.py  coordinator.py  lost_found.py  mess_management.py  rules_policy.py  status_updates.py
src/hostel_buddy_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tools/: groq_client.py  vision_analyzer.py
src/utils/: prompts.py  response_formatter.py  validators.py
test/: test_agents.py
