[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hostel-buddy-mcp"
version = "0.1.0"
description = "Hostel Buddy Multi-Agent Control Plane"
authors = [
    {name = "Aman Singh", email = "amansingh2002.ap@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastmcp==2.11.2",
    "langgraph==0.2.16",
    "langchain==0.2.16",
    "langchain-groq==0.1.9",
     "langchain-community>=0.2.17",
    "pydantic[email]==2.11.7",
    "python-dotenv>=1.1.0",
    "httpx>=0.27.0",
    "google-api-python-client==2.147.0",
    "google-auth-oauthlib==1.2.1",
    "google-auth-httplib2==0.2.0",
    "pillow==10.4.0",
    "pyyaml==6.0.2",
    "typing-extensions==4.12.2",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "isort>=5.0",
]

